--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "metamodels/attribute_translatedalias",
+  "name": "designs2/attribute_translatedalias",
   "description": "MetaModels attribute for translated alias",
   "keywords": [
     "contao",
@@ -29,18 +29,18 @@
     "issues": "https://github.com/MetaModels/attribute_translatedalias/issues",
     "wiki": "http://de.contaowiki.org/MetaModels",
     "irc": "irc://irc.freenode.org/contao.mm",
-    "source": "https://github.com/MetaModels/attribute_translatedalias"
+    "source": "https://github.com/designs2/attribute_translatedalias"
   },
   "require": {
     "php": ">=5.3",
     "contao/core": ">=3.2,<3.6",
-    "contao-community-alliance/composer-plugin": "~2.0",
-    "metamodels/core": "~2.0"
+    "contao-community-alliance/composer-plugin": "*",
+    "metamodels/core": "*"
   },
   "require-dev": {
-    "cyberspectrum/contao-toolbox": "~0.6",
-    "phpcq/all-tasks": "~1.0",
-    "metamodels/base-unit-tests": "~1.0"
+    "cyberspectrum/contao-toolbox": "*",
+    "phpcq/all-tasks": "*",
+    "metamodels/base-unit-tests": "*"
   },
   "conflict": {
     "contao/core": "3.4.0"
